first commit (still not operational)

--- a/admin/package.json
+++ b/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nexus-admin",
+  "name": "admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,24 +11,35 @@
   "dependencies": {
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
-    "drei": "^2.2.21",
+    "dotenv": "^16.5.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.10.4",
+    "fs-extra": "^11.3.0",
+    "lucide-react": "^0.509.0",
+    "multer": "^1.4.5-lts.2",
     "next": "15.3.2",
+    "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.176.0"
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
+    "three": "^0.176.0",
+    "twilio": "^5.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/formidable": "^3.4.5",
+    "@types/fs-extra": "^11.0.4",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
+    "@types/pg": "^8.15.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^4",
     "typescript": "^5"
   }
 }
