feat: add react-tooltip and its type definitions to dependencies

--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-organizational-chart": "^2.2.1",
     "react-particle-animation": "^2.0.2",
     "react-swipeable": "^7.0.2",
+    "react-tooltip": "^5.29.1",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.17",
     "tailwind-merge": "^3.2.0",
@@ -43,6 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-tooltip": "^3.11.0",
     "@types/styled-components": "^5.1.34",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
