--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lightswind": "^3.0.2",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "pg": "^8.16.3",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -43,6 +44,7 @@
     "@tailwindcss/postcss": "^4.1.5",
     "@types/axios": "^0.9.36",
     "@types/node": "^20",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-tooltip": "^3.11.0",
